<resources>
    <string name="app_name">Tourism_App</string>
    <string name="title_activity_main2">Main Screen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="greetings">Welcome back,</string>
    <string name="username">Jane Doe!</string>
    <string name="popCategories">Popular Categories</string>
    <string name="visitedPlaces">Go back in time and revisit some locations</string>
    <string name="category">Category</string>
    <string name="activity_heading">Venture easily in Paris!</string>
    <string name="activity_notifications_heading">Find your favorite places</string>
    <string name="profile_picture_description">Profile picture</string>
    <string name="allFilter">All</string>
    <string name="popularFilter">Popular</string>
    <string name="recommendedFilter">Recommended</string>
    <string name="visitedFilter">Most visited</string>
    <string name="searchPlaceholder">Discover a place…</string>
    <string name="btnAll">View all</string>
    <string-array name="categories">
        <item>Aesthetics</item>
        <item>Events</item>
        <item>Garden</item>
        <item>Museum</item>
    </string-array>

    <string name="landmarkBtn">Mark the landmark as visited</string>
    <string name="visitedLandmark">Forget this place</string>

    <string name="detailOverview">Overview</string>
    <string name="detailHistory">History</string>
    <string name="detailConditions">Conditions</string>
    <string name="detailTransport">Transport</string>

    <string name="conditions">The activity is free if you check ONE of these conditions:</string>

    <string name="schedule">Weekly schedule:</string>

    <string name="transportSubway">Subways</string>
    <string name="transportRER">RER</string>
    <string name="transportTrain">Trains</string>
    <string name="transportBus">Buses</string>
    <string name="transportParking">Parking lots nearby</string>

    <string name="info">More information</string>
</resources>