<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/white"
    android:padding="1dp">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.tourism_app.ui.profile.ProfileFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="-5dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTintMode="screen"
        android:backgroundTint="@color/gold"
        android:text="@string/landmarkBtn"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:stateListAnimator="@null"
        android:elevation="5dp"
        app:icon="@drawable/ic_eye_black_24dp"
        app:iconGravity="textEnd"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:scaleType="centerCrop"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/image_shape"
        app:srcCompat="@drawable/louvre_cover" />

    <TextView
        android:id="@+id/tvActName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvActCategory"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvActCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:paddingVertical="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvActName"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/tvActName" />

    <TextView
        android:id="@+id/tvActLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:paddingVertical="2dp"
        app:layout_constraintEnd_toEndOf="@+id/tvActCategory"
        app:layout_constraintStart_toStartOf="@+id/tvActName"
        app:layout_constraintTop_toBottomOf="@+id/tvActName" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/Widget.App.TabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tvActLocation"
        app:tabGravity="center"
        app:tabIndicatorAnimationMode="elastic"
        app:tabMode="auto"
        app:tabPaddingEnd="15dp"
        app:tabPaddingStart="15dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailOverview" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailHistory" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailConditions" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailTransport" />
    </com.google.android.material.tabs.TabLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/btn_background"
        android:stateListAnimator="@null"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/ic_heart_black_24dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_background"
        android:stateListAnimator="@null"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:srcCompat="@drawable/ic_share_black_24dp" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn_background"
        android:focusable="true"
        android:clickable="true"
        android:stateListAnimator="@null"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/ic_left_arrow_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>